--- a/src/app/inicio/inicio.page.html
+++ b/src/app/inicio/inicio.page.html
@@ -1,20 +1,21 @@
 <ion-header>
   <ion-toolbar color="medium">
-    
+    <ion-title size="large">Duoc UC</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
   
-  <ion-title size="large">Iniciar sesion</ion-title>
+ 
     
   
   <br>
   <br>
-  <ion-button color="medium" expand="block" [routerLink]="['/login']">Docente</ion-button>
   <br>
   
   <ion-button color="medium" expand="block" [routerLink]="['/login1']">Alumno</ion-button>
+  <br>
+  <ion-button color="medium" expand="block" [routerLink]="['/login']">Docente</ion-button>
 </ion-content>
 
 
