--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,7 +1,6 @@
 <ion-header>
   <ion-toolbar color="mycolor">
-    <ion-buttons style="position:absolute" slot="start"><ion-back-button></ion-back-button> </ion-buttons>
-    <ion-title style="position:relative"></ion-title>
+    <ion-title size="large">Duoc UC</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -29,6 +28,9 @@
         Ingresar
       </ion-button>
       <br>
+      <ion-button color="medium" shape="round" fill="outline" [routerLink]="['/inicio']">
+        Volver
+      </ion-button>
     </ion-card-content>
   </ion-card>
 </ion-content>
